# Photo-Editor

./: CMakeLists.txt
include/glad/: glad.h
src/: Application.hpp  glad.c  main.cpp
src/application/: Application.cpp  Application.hpp  Callbacks.hpp
src/rendering/: Renderer.cpp  Renderer.hpp
src/rendering/renderer/: Renderer.cpp  Renderer.hpp  RendererInit.cpp  RendererUI.cpp
src/rendering/shaderprogram/: ShaderProgram.cpp  ShaderProgram.hpp  UniformSetters.cpp
src/rendering/shaders/roundedrect/: RoundedRect.vs
src/rendering/shaders/shape/: Shape.fs  Shape.vs
src/shaderprogram/: ShaderProgram.cpp  ShaderProgram.hpp  UniformSetters.cpp
src/shaders/roundedcorner/: RoundedRect.fs
src/shaders/roundedrect/: RoundedRect.fs  RoundedRect.vs
src/ui/: UI.hpp
src/ui/base/: Container.hpp  Element.hpp
src/ui/components/: Button.hpp  Histogram.hpp  ImageView.hpp  Slider.hpp  StaticText.hpp  TextBox.hpp
src/ui/containers/: Alignment.hpp  HBox.hpp  VBox.hpp
src/ui/renderlist/: Image.hpp  RenderList.hpp  Shape.hpp  Text.hpp
